# Head

- Better error message when named reference can't be parsed
- Changed the default match_type in the MATCH function to be 1
- Fixed a bug when a table has column names containing a # symbol
- Can now isolate more than one worksheet at the same time

# 0.2.18 - 2013 March 2nd

- Had another go at dealing with the way that blank cells become zeros when referenced in some ways but not others
- Named references that are actually #REF! errors are correctly parsed and then turned into errors
- Implemented the VALUE function

# 0.2.17 - 2013 February 11th

- Changed how SUMIF, SUMIFS, and AVERAGEIFS treat blanks in criteria (now consider them to be zeros)
- Add missing cells if they are referenced 
- Adjust the way that ISBLANK() is replaced with a value at compile time

# 0.2.16 - 2013 February 10th

- Fixed bug in response when LEFT and RIGHT are passed negative values
- Implemented LEN function in C runtime
- Implemented RIGHT funtion in C runtime
- Inline blanks are treated as empty strings in MID and RIGHT functions
- Fixed a bug in bounds checking when replacing arithmetic on ranges
- Replace comparisons on arrays with arrays of comparisons
- Ruby version of RIGHT now returns a string if index out of bounds
- Removed the special case optimisation of the COUNT function. It wasn't right in some cases
- Now copes with passing a range where a cell expected in the CHOOSE function, but only if CHOOSE is the first function in a cell
- Now copes with a wider variety of situations where a range that should be converted into a cell is passed to a match or indirect function
- When simplifying arithmetic, ensures results are always numbers
- Added an ENSURE_IS_NUMBER function to the runtime which turns anything that Excel thinks looks a bit like a number into a real number
- Added an inlined_blank type, which is sometimes like a zero, and sometimes like an empty string
- String join in the ruby compilation treates zeros that are blank differently from zeros